// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfilePageLinks - Snapshots > matches snapshot with custom links 1`] = `
<div
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Links
  </h2>
  <div
    class="mx-auto w-full flex-col flex"
    data-testid="container"
  >
    <a
      class="flex cursor-pointer items-center gap-2.5 py-1"
      data-cy="profile-link-example"
      href="https://example.com"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-link shrink-0 text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
        />
        <path
          d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
        />
      </svg>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        Example
      </span>
    </a>
  </div>
</div>
`;

exports[`ProfilePageLinks - Snapshots > matches snapshot with empty links 1`] = `
<div
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Links
  </h2>
  <div
    class="mx-auto w-full flex-col flex"
    data-testid="container"
  >
    <span
      class="text-base font-medium text-muted-foreground"
      data-testid="typography"
    >
      No links added yet.
    </span>
  </div>
</div>
`;

exports[`ProfilePageLinks - Snapshots > matches snapshot with empty links and isOwnProfile true 1`] = `
<div
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Links
  </h2>
  <div
    class="mx-auto w-full flex-col flex"
    data-testid="container"
  >
    <span
      class="text-base font-medium text-muted-foreground"
      data-testid="typography"
    >
      No links added yet.
    </span>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs hover:text-accent-foreground hover:bg-input/50 h-8 gap-1.5 px-3 has-[>svg]:px-2.5 mt-2 border border-border bg-foreground/5"
      data-cy="profile-add-link-btn"
      data-size="sm"
      data-slot="button"
      data-variant="outline"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-link text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
        />
        <path
          d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
        />
      </svg>
      <span
        class="text-foreground text-sm font-bold"
        data-testid="typography"
      >
        Add Link
      </span>
    </button>
  </div>
</div>
`;

exports[`ProfilePageLinks - Snapshots > matches snapshot with isOwnProfile true 1`] = `
<div
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Links
  </h2>
  <div
    class="mx-auto w-full flex-col flex"
    data-testid="container"
  >
    <a
      class="flex cursor-pointer items-center gap-2.5 py-1"
      data-cy="profile-link-bitcoin.org"
      href="https://bitcoin.org"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-link shrink-0 text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
        />
        <path
          d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
        />
      </svg>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        bitcoin.org
      </span>
    </a>
    <a
      class="flex cursor-pointer items-center gap-2.5 py-1"
      data-cy="profile-link-twitter.com/test"
      href="https://twitter.com/test"
    >
      <svg
        class="lucide-x-twitter shrink-0 text-foreground"
        fill="none"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#clip0_18345_202114)"
        >
          <path
            d="M14.2833 10.1616L23.2178 -0.000732422H21.1006L13.3427 8.8231L7.14656 -0.000732422H0L9.36984 13.3425L0 23.9993H2.11732L10.3098 14.681L16.8534 23.9993H24L14.2827 10.1616H14.2833ZM11.3833 13.46L10.4339 12.1313L2.88022 1.55888H6.1323L12.2282 10.0912L13.1776 11.4199L21.1016 22.5106H17.8495L11.3833 13.4605V13.46Z"
            fill="currentColor"
            opacity="0.8"
          />
        </g>
        <defs>
          <clippath
            id="clip0_18345_202114"
          >
            <rect
              fill="white"
              height="24"
              width="24"
            />
          </clippath>
        </defs>
      </svg>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        twitter.com/test
      </span>
    </a>
    <a
      class="flex cursor-pointer items-center gap-2.5 py-1"
      data-cy="profile-link-github.com/test"
      href="https://github.com/test"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-github shrink-0 text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
        />
        <path
          d="M9 18c-4.51 2-5-2-7-2"
        />
      </svg>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        github.com/test
      </span>
    </a>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs hover:text-accent-foreground hover:bg-input/50 h-8 gap-1.5 px-3 has-[>svg]:px-2.5 mt-2 border border-border bg-foreground/5"
      data-cy="profile-add-link-btn"
      data-size="sm"
      data-slot="button"
      data-variant="outline"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-link text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
        />
        <path
          d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
        />
      </svg>
      <span
        class="text-foreground text-sm font-bold"
        data-testid="typography"
      >
        Add Link
      </span>
    </button>
  </div>
</div>
`;

exports[`ProfilePageLinks - Snapshots > matches snapshot with links 1`] = `
<div
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Links
  </h2>
  <div
    class="mx-auto w-full flex-col flex"
    data-testid="container"
  >
    <a
      class="flex cursor-pointer items-center gap-2.5 py-1"
      data-cy="profile-link-bitcoin.org"
      href="https://bitcoin.org"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-link shrink-0 text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
        />
        <path
          d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
        />
      </svg>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        bitcoin.org
      </span>
    </a>
    <a
      class="flex cursor-pointer items-center gap-2.5 py-1"
      data-cy="profile-link-twitter.com/test"
      href="https://twitter.com/test"
    >
      <svg
        class="lucide-x-twitter shrink-0 text-foreground"
        fill="none"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#clip0_18345_202114)"
        >
          <path
            d="M14.2833 10.1616L23.2178 -0.000732422H21.1006L13.3427 8.8231L7.14656 -0.000732422H0L9.36984 13.3425L0 23.9993H2.11732L10.3098 14.681L16.8534 23.9993H24L14.2827 10.1616H14.2833ZM11.3833 13.46L10.4339 12.1313L2.88022 1.55888H6.1323L12.2282 10.0912L13.1776 11.4199L21.1016 22.5106H17.8495L11.3833 13.4605V13.46Z"
            fill="currentColor"
            opacity="0.8"
          />
        </g>
        <defs>
          <clippath
            id="clip0_18345_202114"
          >
            <rect
              fill="white"
              height="24"
              width="24"
            />
          </clippath>
        </defs>
      </svg>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        twitter.com/test
      </span>
    </a>
    <a
      class="flex cursor-pointer items-center gap-2.5 py-1"
      data-cy="profile-link-github.com/test"
      href="https://github.com/test"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-github shrink-0 text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
        />
        <path
          d="M9 18c-4.51 2-5-2-7-2"
        />
      </svg>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        github.com/test
      </span>
    </a>
  </div>
</div>
`;

exports[`ProfilePageLinks - Snapshots > matches snapshot with mailto link 1`] = `
<div
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Links
  </h2>
  <div
    class="mx-auto w-full flex-col flex"
    data-testid="container"
  >
    <a
      class="flex cursor-pointer items-center gap-2.5 py-1"
      data-cy="profile-link-contact"
      href="mailto:hello@example.com"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-mail shrink-0 text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
        />
        <rect
          height="16"
          rx="2"
          width="20"
          x="2"
          y="4"
        />
      </svg>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        Contact
      </span>
    </a>
  </div>
</div>
`;

exports[`ProfilePageLinks - Snapshots > matches snapshot with tel link 1`] = `
<div
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Links
  </h2>
  <div
    class="mx-auto w-full flex-col flex"
    data-testid="container"
  >
    <a
      class="flex cursor-pointer items-center gap-2.5 py-1"
      data-cy="profile-link-call us"
      href="tel:+1234567890"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-phone shrink-0 text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.832 16.568a1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 6.392 6.384"
        />
      </svg>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        Call Us
      </span>
    </a>
  </div>
</div>
`;

exports[`ProfilePageLinks - Snapshots > matches snapshot with undefined links 1`] = `
<div
  class="mx-auto w-full flex-col flex"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Links
  </h2>
  <div
    class="mx-auto w-full flex-col flex"
    data-testid="container"
  >
    <span
      class="text-base font-medium text-muted-foreground"
      data-testid="typography"
    >
      No links added yet.
    </span>
  </div>
</div>
`;
